<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheltuieliActivity">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="161dp"
        android:layout_height="32dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="10dp"
        android:text="@string/checkBox"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox6"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="184dp"
        android:layout_height="31dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="96dp"
        android:text="@string/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="149dp"
        android:layout_height="30dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="23dp"
        android:text="@string/checkBox3"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toStartOf="@+id/editText5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="143dp"
        android:layout_height="33dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="3dp"
        android:text="@string/checkBox4"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="105dp"
        android:layout_height="31dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="2dp"
        android:text="@string/checkBox5"
        app:layout_constraintBottom_toTopOf="@+id/editText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="102dp"
        android:layout_height="32dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="180dp"
        android:text="@string/checkBox6"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="169dp"
        android:layout_height="15dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:hint="@string/text3"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="169dp"
        android:layout_height="15dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="169dp"
        android:layout_height="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.438"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="169dp"
        android:layout_height="15dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="1dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="169dp"
        android:layout_height="15dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="138dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="169dp"
        android:layout_height="15dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="100dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Switch"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="497dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="64dp" />
</android.support.constraint.ConstraintLayout>